--- a/assets/css/slides.scss
+++ b/assets/css/slides.scss
@@ -32,16 +32,12 @@ $presentation-h6-font-size: 1em;
 
 /* font */
 /* major third scale */
-.largest { font-size: 1.953em;}
-.larger { font-size: 1.563em;}
-.large { font-size: 1.25em;}
-.small { font-size: 0.8em;}
-.smaller { font-size: 0.64em;}
-.smallest { font-size: 0.512em;}
-
-.reveal pre {
-  font-size: 1.75rem !important;
-}
+.largest { font-size: 1.953em; }
+.larger { font-size: 1.563em; }
+.large { font-size: 1.25em; }
+.small { font-size: 0.8em; }
+.smaller { font-size: 0.64em; }
+.smallest { font-size: 0.512em; }
 
 .reveal .largest pre { font-size: 3.41rem !important; }
 .reveal .larger pre { font-size: 2.73rem !important; }
@@ -62,8 +58,14 @@ $presentation-h6-font-size: 1em;
 .reveal .smallest code { font-size: 0.41em !important; }
 
 .reveal pre {
+  font-size: 1.75rem !important;
   line-height: 1.3;
   margin-bottom: 0.5em;
+}
+
+.reveal .code-with-filename-file pre {
+  background-color: transparent;
+  font-size: 80% !important;
 }
 
 .reveal pre,
@@ -143,10 +145,9 @@ $presentation-h6-font-size: 1em;
 .badge {
   background-color: $primary;
   color: white;
-  font-size: 0.85em;
   padding: 0.05em 0.3em;
   border-radius: 4px;
-  vertical-align: baseline;
+  vertical-align: middle;
 }
 
 .badge-primary {
@@ -361,4 +362,10 @@ $presentation-h6-font-size: 1em;
 
 .references {
   font-size: 0.7rem;
+}
+
+/* shinylive */
+
+.reveal .shinylive-wrapper {
+  margin: 0;
 }
