Increased mermaid font size

--- a/assets/css/slides.scss
+++ b/assets/css/slides.scss
@@ -369,3 +369,7 @@ $presentation-h6-font-size: 1em;
 .reveal .shinylive-wrapper {
   margin: 0;
 }
+
+svg.mermaid-js g.label {
+  font-size: 1.4em;
+}
